--- a/src/index.scss
+++ b/src/index.scss
@@ -2,4 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+$font-family-base: 'Outfit', sans-serif;
 @import "~bootstrap/scss/bootstrap";
+
+
+body {
+  padding: 8px;
+}
+
+h1 {
+  font-size: 32px;
+  font-weight: 900;
+}
