--- a/Demo/src/index.scss
+++ b/Demo/src/index.scss
@@ -3,10 +3,13 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
+$primary: #2D6A4F;
 $font-family-base: 'Outfit', sans-serif;
 @import "~bootstrap/scss/bootstrap";
 
+p {
+  font-size: 14px;
+}
 
 body {
   padding: 8px;
@@ -15,4 +18,44 @@ body {
 h1 {
   font-size: 32px;
   font-weight: 900;
+}
+
+h2 {
+  font-size: 20px;
+  font-weight: 600;
+}
+
+h3 {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.material-symbols-rounded {
+  font-variation-settings:
+    'FILL' 0,
+    'wght' 500,
+    'GRAD' 0,
+    'opsz' 48
+}
+
+.material-symbols-rounded.fill {
+  font-variation-settings:
+    'FILL' 1,
+    'wght' 500,
+    'GRAD' 0,
+    'opsz' 48
+}
+
+.btn .material-symbols-rounded {
+  font-size: 20px;
+  position: relative;
+  top: 4px;
+  margin: -3px 2px;
+}
+
+.material-symbols-rounded.inline {
+  font-size: 20px;
+  position: relative;
+  top: 4px;
+  margin: -3px -16px 0 0;
 }
