--- a/Digital-Product-Pass/src/components/curves.css
+++ b/Digital-Product-Pass/src/components/curves.css
@@ -1,23 +1,3 @@
-.custom-shape-divider-top-1707035769 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  overflow: hidden;
-  line-height: 0;
-}
-
-.custom-shape-divider-top-1707035769 svg {
-  position: relative;
-  display: block;
-  width: calc(100% + 1.3px);
-  height: 19px;
-}
-
-.custom-shape-divider-top-1707035769 .shape-fill {
-  fill: --tailwind;
-}
-
 .custom-shape-divider-bottom-1707033920 {
   position: absolute;
   bottom: 0;
@@ -36,5 +16,5 @@
 }
 
 .custom-shape-divider-bottom-1707033920 .shape-fill {
-  fill: var(--primary-color);
+  fill: var(--transparent-green-color);
 }
