--- a/Demo/src/index.scss
+++ b/Demo/src/index.scss
@@ -7,6 +7,10 @@ $primary: #2D6A4F;
 $font-family-base: 'Outfit', sans-serif;
 @import "~bootstrap/scss/bootstrap";
 
+body {
+  padding: 0 !important;
+}
+
 p {
   font-size: 14px;
 }
@@ -28,6 +32,10 @@ h2 {
 h3 {
   font-size: 18px;
   font-weight: 600;
+}
+
+.Bodycontainer {
+  padding: 0 22px;
 }
 
 .material-symbols-rounded {
